# CVM_plus_plus

./: CMakeLists.txt  LICENSE  README.md  REPORT.md  instructions.txt
include/: AstPrinter.hpp  Compiler.hpp  Expr.hpp  Parser.hpp  Scanner.hpp  Stmt.hpp  Token.hpp  chunk.hpp  token.hpp  vm.hpp
src/: compiler.cpp  main  main.cpp  parser.cpp  scanner.cpp  token.cpp  vm.cpp
tests/: REPORT.md  booleans.cvm  calculator_demo.cvm  if_else.cvm  input_print.cvm  instructions.txt  simple_math.cvm  truth_machine.cvm  variables.cvm  while_loop.cvm
